# book-lending-system

./: .env  Cargo.toml  README.md  sqlx-data.json
db/: database.db  schema.sql
src/: admin.rs  auth.rs  book.rs  borrow.rs  db.rs  db_setup.rs  main.rs  utils.rs
static/css/: style.css
static/js/: script.js
templates/: add_book.html  admin_books.html  admin_borrowed.html  admin_dashboard.html  admin_overdue.html  admin_users.html  browse_books.html  due_books.html  edit_book.html  lender_dashboard.html  login.html  logout.html  my_books.html  register.html  return_books.html
