[package]
name = "book_lending_system"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "offline"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
sha2 = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
